Fix carousel scroll buttons visibility

--- a/src/assets/less/pages/globalping/network.less
+++ b/src/assets/less/pages/globalping/network.less
@@ -51,10 +51,6 @@
 				grid-template-columns: repeat(4, 1fr);
 				overflow-x: auto;
 				padding: 16px;
-
-				@media (min-width: @screen-sm-min) {
-					padding: 16px 0;
-				}
 			}
 
 			&_item {
@@ -82,6 +78,7 @@
 			}
 
 			&_prev, &_next {
+				display: none;
 				position: absolute;
 				top: 50%;
 				transform: translate(0, -50%);
@@ -91,14 +88,9 @@
 				border: 1.5px solid #e7e7ee;
 				width: 24px;
 				height: 24px;
-				display: flex;
 				align-items: center;
 				justify-content: center;
 				border-radius: 100px;
-
-				@media (min-width: @screen-sm-min) {
-					display: none;
-				}
 			}
 
 			&_prev {
@@ -107,6 +99,17 @@
 
 			&_next {
 				right: -12px;
+			}
+
+			&.has-scroll {
+				.gp-network_stats_items {
+					padding: 16px 0;
+				}
+
+				.gp-network_stats_prev,
+				.gp-network_stats_next {
+					display: flex;
+				}
 			}
 		}
 
